minor spacing issues resolved

--- a/styles.scss
+++ b/styles.scss
@@ -22,7 +22,7 @@ $revel-blue: #00a3e0;
       }
     }
     img.CC-logo{
-      margin: 25px auto;
+      margin: 40px auto 20px auto;
       min-height: 40px;
       width: inherit;
 
@@ -32,6 +32,7 @@ $revel-blue: #00a3e0;
       text-align: left;
       padding: 15px;
       font-size: 2.4em;
+      margin: 40px auto 20px auto;
     }
     p.cta-text{
       text-align: left;
@@ -103,7 +104,7 @@ $revel-blue: #00a3e0;
           border-radius: 4px;
           background-color: $revel-blue;
           .mktoButtonWrap {
-            width: 100%; 
+            width: 100%;
             border: none;
             border-radius: 4px;
             button {
